# CC98Autosign

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.json.example  log.py  main.py  pyproject.toml  requirements.txt  user.py
.github/workflows/: checkin.yml  release.yml
